--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,7 @@ async function manualSync() {
 // ═══════════════════════════════════════════
 // UTILS
 // ═══════════════════════════════════════════
-function fmt(n){return Math.round(n).toLocaleString('ru-RU')+' ₽';}
+function fmt(n){return Math.round(n).toLocaleString('ru-RU');}
 let toastTimer=null;
 function showToast(msg, duration){
   const t=document.getElementById('toast');
