--- a/index.html
+++ b/index.html
@@ -232,6 +232,115 @@ body{font-family:'Nunito',sans-serif;background:var(--cream);color:var(--ink);mi
 .loading-spinner{width:40px;height:40px;border:3px solid #E8E5EE;border-top-color:var(--violet);border-radius:50%;animation:spin .7s linear infinite}
 @keyframes spin{to{transform:rotate(360deg)}}
 .loading-txt{font-family:'Unbounded',sans-serif;font-size:13px;font-weight:700;color:var(--ink-muted)}
+
+/* ═══════════════════════════════════════════
+   DESKTOP LAYOUT (>= 900px)
+═══════════════════════════════════════════ */
+@media (min-width: 900px) {
+  body { max-width: 100%; background: #ECEAE4; }
+  .bottom-nav { display: none; }
+  .screen { padding-bottom: 0; min-height: 100vh; }
+
+  /* Desktop wrapper */
+  #desktop-shell {
+    display: flex; flex-direction: column; min-height: 100vh;
+  }
+  /* Desktop topbar */
+  #desktop-topbar {
+    display: flex; align-items: center; justify-content: space-between;
+    padding: 18px 40px; background: var(--ink); color: white; position: sticky; top: 0; z-index: 50;
+  }
+  #desktop-topbar .dt-title {
+    font-family: 'Unbounded', sans-serif; font-size: 18px; font-weight: 800; color: white;
+  }
+  #desktop-topbar .dt-nav { display: flex; gap: 8px; }
+  #desktop-topbar .dt-tab {
+    padding: 8px 18px; border: none; border-radius: 10px; font-family: 'Nunito', sans-serif;
+    font-size: 13px; font-weight: 700; cursor: pointer; background: rgba(255,255,255,.1);
+    color: rgba(255,255,255,.6); transition: all .2s;
+  }
+  #desktop-topbar .dt-tab.active { background: white; color: var(--ink); }
+  #desktop-topbar .dt-right { display: flex; align-items: center; gap: 12px; }
+  #desktop-topbar .dt-kopilka {
+    background: var(--violet); border-radius: 12px; padding: 8px 16px;
+    display: flex; align-items: center; gap: 8px; cursor: pointer; transition: opacity .2s;
+  }
+  #desktop-topbar .dt-kopilka:hover { opacity: .85; }
+  #desktop-topbar .dt-kop-label { font-size: 10px; font-weight: 700; color: rgba(255,255,255,.7); text-transform: uppercase; letter-spacing: .5px; }
+  #desktop-topbar .dt-kop-val { font-family: 'Unbounded', sans-serif; font-size: 15px; font-weight: 800; color: white; }
+
+  /* Hide mobile screens on desktop */
+  #screen-periods, #screen-kopilka, #screen-settings { display: none !important; }
+
+  /* Desktop content area */
+  #desktop-content { flex: 1; padding: 28px 40px; }
+
+  /* Desktop: periods grid view */
+  #dt-periods-grid {
+    display: grid; grid-template-columns: repeat(3, 1fr); gap: 16px;
+  }
+  .dt-period-card {
+    background: var(--white); border-radius: var(--r); box-shadow: var(--shadow);
+    overflow: hidden; display: flex; flex-direction: column;
+  }
+  .dt-period-card.current { outline: 2px solid var(--violet); }
+  .dt-card-header {
+    background: var(--ink); color: white; padding: 14px 16px 12px;
+    display: flex; justify-content: space-between; align-items: flex-start;
+  }
+  .dt-card-name { font-family: 'Unbounded', sans-serif; font-size: 13px; font-weight: 700; }
+  .dt-card-income { font-family: 'Unbounded', sans-serif; font-size: 18px; font-weight: 800; margin-top: 4px; }
+  .dt-card-stats { display: flex; gap: 6px; margin-top: 8px; }
+  .dt-stat { flex: 1; background: rgba(255,255,255,.08); border-radius: 8px; padding: 6px 8px; }
+  .dt-stat-lbl { font-size: 9px; font-weight: 700; text-transform: uppercase; letter-spacing: .5px; opacity: .5; }
+  .dt-stat-val { font-family: 'Unbounded', sans-serif; font-size: 12px; font-weight: 800; margin-top: 2px; }
+  .dt-prog { height: 3px; background: rgba(255,255,255,.15); margin-top: 10px; border-radius: 2px; }
+  .dt-prog-fill { height: 100%; border-radius: 2px; background: var(--green); }
+  .dt-prog-fill.warn { background: var(--yellow); }
+  .dt-expenses { padding: 10px 12px; flex: 1; }
+  .dt-exp-item {
+    display: flex; align-items: center; gap: 8px; padding: 6px 0;
+    border-bottom: 1px solid #F0EEF8; font-size: 13px; cursor: pointer;
+  }
+  .dt-exp-item:last-child { border-bottom: none; }
+  .dt-exp-item.paid .dt-exp-name { color: var(--ink-muted); text-decoration: line-through; }
+  .dt-exp-check {
+    width: 20px; height: 20px; border-radius: 6px; border: 2px solid #D0CDE0;
+    flex-shrink: 0; display: flex; align-items: center; justify-content: center;
+    font-size: 10px; color: white; background: white; transition: all .2s;
+  }
+  .dt-exp-item.paid .dt-exp-check { background: var(--green); border-color: var(--green); }
+  .dt-exp-name { flex: 1; font-weight: 600; }
+  .dt-exp-amt { font-family: 'Unbounded', sans-serif; font-size: 12px; font-weight: 700; }
+  .dt-exp-item.paid .dt-exp-amt { color: var(--green); }
+  .dt-card-footer {
+    padding: 10px 12px; border-top: 1px solid #F0EEF8;
+    display: flex; justify-content: space-between; align-items: center;
+  }
+  .dt-add-btn {
+    background: none; border: 1px dashed #D0CDE0; border-radius: 8px; padding: 5px 10px;
+    font-family: 'Nunito', sans-serif; font-size: 12px; font-weight: 700; color: var(--ink-muted);
+    cursor: pointer; transition: all .2s;
+  }
+  .dt-add-btn:hover { border-color: var(--violet); color: var(--violet); }
+  .dt-leftover { font-family: 'Unbounded', sans-serif; font-size: 12px; font-weight: 700; }
+
+  /* Desktop settings & kopilka — centered single column */
+  #dt-settings-wrap, #dt-kopilka-wrap {
+    max-width: 600px; margin: 0 auto;
+  }
+  #dt-settings-wrap .screen, #dt-kopilka-wrap .screen {
+    display: flex !important; max-width: 100%;
+  }
+  #dt-settings-wrap .topbar, #dt-kopilka-wrap .topbar { display: none; }
+  #dt-settings-wrap .screen, #dt-kopilka-wrap .screen {
+    padding-bottom: 0;
+  }
+}
+
+@media (max-width: 899px) {
+  #desktop-shell { display: none !important; }
+}
 </style>
 </head>
 <body>
@@ -241,6 +350,46 @@ body{font-family:'Nunito',sans-serif;background:var(--cream);color:var(--ink);mi
   <div class="loading-spinner"></div>
   <div class="loading-txt" id="loading-txt">Загрузка...</div>
 </div>
+
+<!-- DESKTOP SHELL -->
+<div id="desktop-shell">
+  <div id="desktop-topbar">
+    <div class="dt-title">Мои финансы ✨</div>
+    <div class="dt-nav">
+      <button class="dt-tab active" id="dt-tab-periods" onclick="dtSwitchTab('periods')">📅 Периоды</button>
+      <button class="dt-tab" id="dt-tab-kopilka" onclick="dtSwitchTab('kopilka')">💸 Копилка</button>
+      <button class="dt-tab" id="dt-tab-settings" onclick="dtSwitchTab('settings')">⚙️ Настройки</button>
+    </div>
+    <div class="dt-right">
+      <div class="dt-kopilka" onclick="dtSwitchTab('kopilka')">
+        <div>
+          <div class="dt-kop-label">Копилка</div>
+          <div class="dt-kop-val" id="dt-kop-val">0</div>
+        </div>
+        <span style="font-size:20px">💸</span>
+      </div>
+      <div class="sync-badge offline" id="sync-badge-dt" onclick="manualSync()" style="width:40px;height:40px;border-radius:12px;background:rgba(255,255,255,.1);display:flex;align-items:center;justify-content:center;cursor:pointer;" title="Синхронизация">
+        <span id="sync-label-dt" style="font-size:18px">🤫</span>
+      </div>
+    </div>
+  </div>
+  <div id="desktop-content">
+    <!-- Periods grid -->
+    <div id="dt-periods-view">
+      <div id="dt-periods-grid"></div>
+    </div>
+    <!-- Kopilka view -->
+    <div id="dt-kopilka-view" style="display:none; max-width:600px; margin:0 auto;">
+      <div id="dt-kopilka-content"></div>
+    </div>
+    <!-- Settings view -->
+    <div id="dt-settings-view" style="display:none; max-width:600px; margin:0 auto;">
+      <div id="dt-settings-content"></div>
+    </div>
+  </div>
+</div>
+
+
 
 <!-- PERIODS -->
 <div class="screen active" id="screen-periods">
@@ -1649,6 +1798,240 @@ async function init() {
 }
 
 init();
+
+
+// ═══════════════════════════════════════════
+// DESKTOP LAYOUT JS
+// ═══════════════════════════════════════════
+
+let dtCurrentTab = 'periods';
+
+function isDesktop() { return window.innerWidth >= 900; }
+
+function dtSwitchTab(tab) {
+  dtCurrentTab = tab;
+  ['periods','kopilka','settings'].forEach(t => {
+    document.getElementById('dt-tab-' + t).classList.toggle('active', t === tab);
+    document.getElementById('dt-' + t + '-view').style.display = t === tab ? 'block' : 'none';
+  });
+  if (tab === 'periods') renderDtGrid();
+  if (tab === 'kopilka') renderDtKopilka();
+  if (tab === 'settings') renderDtSettings();
+}
+
+function renderDtKopilkaBalance() {
+  const el = document.getElementById('dt-kop-val');
+  if (el) el.textContent = fmt(state.kopilka.balance);
+}
+
+function setSyncStatusDt(status) {
+  const lbl = document.getElementById('sync-label-dt');
+  if (lbl) {
+    const emoji = status === 'connected' ? '🙂' : status === 'syncing' ? '👀' : '🤫';
+    lbl.textContent = emoji;
+  }
+}
+
+function renderDtGrid() {
+  if (!isDesktop()) return;
+  renderDtKopilkaBalance();
+  const grid = document.getElementById('dt-periods-grid');
+  if (!grid) return;
+  grid.innerHTML = '';
+  state.periods.forEach((p, idx) => {
+    const totalExp = p.expenses.reduce((s,e) => s + e.amount, 0);
+    const paidExp  = p.expenses.filter(e => e.paid).reduce((s,e) => s + e.amount, 0);
+    const leftover = p.income - totalExp;
+    const pct = totalExp > 0 ? Math.round(paidExp / totalExp * 100) : 0;
+    const isCurrent = idx === state.currentIdx;
+    const isFuture = !isCurrentOrPastPeriod(idx);
+
+    const card = document.createElement('div');
+    card.className = 'dt-period-card' + (isCurrent ? ' current' : '');
+
+    const fillClass = pct >= 100 ? 'warn' : pct >= 70 ? 'warn' : '';
+    const leftColor = leftover < 0 ? 'var(--coral)' : 'var(--yellow)';
+
+    card.innerHTML = `
+      <div class="dt-card-header">
+        <div>
+          <div class="dt-card-name">${p.name}</div>
+          <div class="dt-card-income">${fmt(p.income)}</div>
+          <div class="dt-card-stats">
+            <div class="dt-stat"><div class="dt-stat-lbl">Расходы</div><div class="dt-stat-val" style="color:var(--coral)">${fmt(totalExp)}</div></div>
+            <div class="dt-stat"><div class="dt-stat-lbl">Оплачено</div><div class="dt-stat-val" style="color:var(--green)">${fmt(paidExp)}</div></div>
+            <div class="dt-stat"><div class="dt-stat-lbl">Остаток</div><div class="dt-stat-val" style="color:${leftColor}">${fmt(leftover)}</div></div>
+          </div>
+          <div class="dt-prog"><div class="dt-prog-fill ${fillClass}" style="width:${Math.min(pct,100)}%"></div></div>
+        </div>
+        <div style="display:flex;gap:6px;align-items:flex-start">
+          ${!isFuture ? `<button onclick="dtAddExpense(${idx})" style="background:rgba(255,255,255,.15);border:none;border-radius:8px;color:white;padding:4px 8px;font-family:'Nunito',sans-serif;font-size:11px;font-weight:700;cursor:pointer">+ Расход</button>` : ''}
+        </div>
+      </div>
+      <div class="dt-expenses" id="dt-exp-${idx}"></div>
+    `;
+
+    // Render expenses
+    const expContainer = card.querySelector(`#dt-exp-${idx}`);
+    if (!p.expenses.length) {
+      expContainer.innerHTML = '<div style="padding:12px 0;text-align:center;color:var(--ink-muted);font-size:12px">Нет расходов</div>';
+    } else {
+      p.expenses.forEach((exp, ei) => {
+        const item = document.createElement('div');
+        item.className = 'dt-exp-item' + (exp.paid ? ' paid' : '') + (isFuture ? ' future-locked' : '');
+        item.innerHTML = `
+          <div class="dt-exp-check">${exp.paid ? '✓' : ''}</div>
+          <div class="dt-exp-name">${exp.name}</div>
+          <div class="dt-exp-amt">${fmt(exp.amount)}</div>
+        `;
+        if (!isFuture) {
+          item.onclick = () => { state.currentIdx = idx; toggleExp(ei); renderDtGrid(); };
+        }
+        expContainer.appendChild(item);
+      });
+    }
+
+    grid.appendChild(card);
+  });
+}
+
+function dtAddExpense(periodIdx) {
+  state.currentIdx = periodIdx;
+  renderPeriod();
+  openAddExpense();
+  // After save, re-render grid
+  const origSave = window._origSaveExpense;
+}
+
+function renderDtKopilka() {
+  if (!isDesktop()) return;
+  renderDtKopilkaBalance();
+  const wrap = document.getElementById('dt-kopilka-content');
+  if (!wrap) return;
+  // Reuse mobile kopilka render into a container
+  const tmp = document.createElement('div');
+  tmp.innerHTML = `
+    <div style="background:linear-gradient(135deg,var(--violet) 0%,#5B3FA8 100%);border-radius:var(--r);padding:24px;color:white;margin-bottom:16px;position:relative;overflow:hidden">
+      <div style="font-size:11px;font-weight:700;text-transform:uppercase;letter-spacing:1px;opacity:.65">Баланс копилки</div>
+      <div style="font-family:'Unbounded',sans-serif;font-size:36px;font-weight:800;margin-top:6px">${fmt(state.kopilka.balance)}</div>
+      <div style="font-size:44px;position:absolute;right:20px;top:16px;opacity:.25">💸</div>
+    </div>
+    <div style="display:flex;gap:10px;margin-bottom:16px">
+      <button onclick="openKopilkaOp('add')" style="flex:1;padding:11px;border:none;border-radius:var(--rs);font-family:'Nunito',sans-serif;font-size:14px;font-weight:700;cursor:pointer;background:var(--green-light);color:var(--green)">+ Пополнить</button>
+      <button onclick="openKopilkaOp('sub')" style="flex:1;padding:11px;border:none;border-radius:var(--rs);font-family:'Nunito',sans-serif;font-size:14px;font-weight:700;cursor:pointer;background:var(--coral-light);color:var(--coral)">− Снять</button>
+    </div>
+    <div id="dt-kop-timeline"></div>
+  `;
+  wrap.innerHTML = '';
+  wrap.appendChild(tmp);
+  // Render timeline into dt-kop-timeline
+  const tlContainer = document.getElementById('dt-kop-timeline');
+  if (tlContainer) {
+    // Temporarily swap container for renderKopilka
+    const origEl = document.getElementById('kop-timeline');
+    origEl._dtSwapped = true;
+    tlContainer.id = 'kop-timeline-real';
+    const realEl = document.getElementById('kop-timeline');
+    // Just call the timeline build directly
+    renderKopilkaInto(tlContainer);
+  }
+}
+
+function renderKopilkaInto(container) {
+  // Simplified kopilka timeline render
+  const tl = state.kopilka.timeline || state.kopilka.entries || [];
+  const pastItems = tl.filter(t => t.paid);
+  const futureItems = tl.filter(t => !t.paid);
+  container.innerHTML = '';
+
+  if (pastItems.length) {
+    const hdr = document.createElement('div');
+    hdr.style.cssText = 'font-family:Unbounded,sans-serif;font-size:11px;font-weight:700;text-transform:uppercase;letter-spacing:.6px;color:var(--ink-muted);padding:4px 0 8px';
+    hdr.textContent = 'История';
+    container.appendChild(hdr);
+    pastItems.slice(-5).forEach(item => container.appendChild(makeTlItem(item, 'past', null, false)));
+  }
+  if (futureItems.length) {
+    let runBal = state.kopilka.balance;
+    const hdr = document.createElement('div');
+    hdr.style.cssText = 'font-family:Unbounded,sans-serif;font-size:11px;font-weight:700;text-transform:uppercase;letter-spacing:.6px;color:var(--ink-muted);padding:12px 0 8px';
+    hdr.textContent = 'Планируется';
+    container.appendChild(hdr);
+    futureItems.forEach(item => {
+      const balBefore = runBal;
+      if (item.type === 'income' || item.typ === 'в копилку') runBal += item.amount;
+      else runBal -= item.amount;
+      const isShort = (item.type === 'expense' || item.typ === 'кредит') && item.isCredit && balBefore < item.amount;
+      const el = makeTlItem({...item, balAfter: runBal}, 'future', runBal, isShort);
+      // Fix onclick for desktop
+      container.appendChild(el);
+    });
+  }
+}
+
+function renderDtSettings() {
+  if (!isDesktop()) return;
+  // Clone settings screen content into dt-settings-content
+  const wrap = document.getElementById('dt-settings-content');
+  if (!wrap) return;
+  wrap.innerHTML = '';
+  // Re-render the settings sections manually
+  const settingsScreen = document.getElementById('screen-settings').cloneNode(true);
+  settingsScreen.style.display = 'block';
+  settingsScreen.style.maxWidth = '100%';
+  settingsScreen.style.paddingBottom = '20px';
+  // Remove topbar from clone
+  const tb = settingsScreen.querySelector('.topbar');
+  if (tb) tb.remove();
+  wrap.appendChild(settingsScreen);
+  // Re-init settings inputs in the clone
+  const salInput = settingsScreen.querySelector('#salary-input');
+  if (salInput) {
+    salInput.value = state.salary || 150000;
+    salInput.addEventListener('input', () => {
+      const sal = parseFloat(salInput.value) || 150000;
+      const rows = genSalaryPreview(sal);
+      const preview = settingsScreen.querySelector('#sal-preview');
+      if (preview) preview.innerHTML = '<div class="sal-preview-title">Расчёт ближайших периодов</div>' +
+        rows.map(r => `<div class="sal-row"><span class="sal-row-lbl">${r.label}</span><span class="sal-row-val" style="color:${r.note==='avans'?'var(--violet)':'var(--green)'}">${fmt(r.val)}</span></div>`).join('');
+    });
+    salInput.dispatchEvent(new Event('input'));
+  }
+}
+
+// Override setSyncStatus to also update desktop badge
+const _origSetSyncStatus = setSyncStatus;
+function setSyncStatus(status, label) {
+  _origSetSyncStatus(status, label);
+  setSyncStatusDt(status);
+  if (status === 'connected' && isDesktop() && dtCurrentTab === 'periods') {
+    renderDtGrid();
+    renderDtKopilkaBalance();
+  }
+}
+
+// Override renderPeriod/renderKopilka to also update desktop when active
+const _origRenderPeriod = renderPeriod;
+function renderPeriod() {
+  _origRenderPeriod();
+  if (isDesktop() && dtCurrentTab === 'periods') renderDtGrid();
+}
+
+const _origRenderKopilka = renderKopilka;
+function renderKopilka(showAll) {
+  _origRenderKopilka(showAll);
+  renderDtKopilkaBalance();
+  if (isDesktop() && dtCurrentTab === 'kopilka') renderDtKopilka();
+}
+
+// Init desktop on load
+window.addEventListener('resize', () => {
+  if (isDesktop() && dtCurrentTab === 'periods') renderDtGrid();
+});
+
+// Init desktop on load
+if (isDesktop()) renderDtGrid();
+
 </script>
 </body>
 </html>
